cmake_minimum_required(VERSION 3.15)
project(DataStructure)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(L01 LinearList/L01_SequenceTable.cpp)
add_executable(L02 LinearList/L02_SingleLinkedList.cpp)
add_executable(L03 LinearList/L03_DoubleLinkedList.cpp)
add_executable(S01 Stack/S01_SqStack.cpp)
add_executable(S02 Stack/S02_LinkedStack.cpp)
add_executable(Q01 Queue/Q01_SqQueue.cpp)
add_executable(Q02 Queue/Q02_LinkedQueue.cpp)
add_executable(S03 Stack/S03_SharedStack.cpp)
add_executable(Str01 String/Str01_SqString.cpp)
add_executable(Str02 String/Str02_PatternMatch.cpp)
add_executable(Str03 String/Str03_KMP.cpp)
add_executable(BT01 Tree/BT01_BinaryTree.cpp)
add_executable(G01 Graph/G01_Graph.cpp)
add_executable(Sort Sort/Sort.cpp)